--- a/CsvLoader3/packages.config
+++ b/CsvLoader3/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="GoogleAuthenticator" version="1.2.1" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
@@ -26,4 +27,6 @@
   <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net452" />
   <package id="MongoDB.Driver.GridFS" version="2.4.4" targetFramework="net452" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net452" />
+  <package id="Unity" version="2.1.505.0" targetFramework="net452" />
+  <package id="Unity.Mvc3" version="1.2" targetFramework="net452" />
 </packages>
