--- a/CsvLoader3/Web.config
+++ b/CsvLoader3/Web.config
@@ -18,10 +18,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--<add key="RouteDebugger:Enabled" value="true" />-->
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" maxRequestLength="2147483647"/>
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="2147483647" />
     <!--<httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>-->
