--- a/CsvLoader3/packages.config
+++ b/CsvLoader3/packages.config
@@ -25,6 +25,7 @@
   <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net452" />
   <package id="MongoDB.Driver.GridFS" version="2.4.4" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net452" />
+  <package id="routedebugger" version="2.1.5" targetFramework="net452" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net452" />
   <package id="Unity" version="2.1.505.0" targetFramework="net452" />
   <package id="Unity.Mvc3" version="1.2" targetFramework="net452" />
